fix bottom gaps

--- a/styles/job.module.scss
+++ b/styles/job.module.scss
@@ -2,9 +2,9 @@
 
 .jobCover {
   display: flex;
-  position: relative;
+  position: absolute;
   bottom: 0;
-margin-top: 100px;
+// margin-top: 100px;
 
   & div {
     display: block !important;
