--- a/styles/services.module.scss
+++ b/styles/services.module.scss
@@ -2,10 +2,8 @@
 
 .servicesCover {
   display: flex;
-  position: relative;
+  position: absolute;
   bottom: 0;
-  margin-bottom: 100px;
-  margin-top: -100px;
 
   & div {
     display: block !important;
